clean requirements for Render

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-livekit-agents
-livekit-plugins-openai
-livekit-plugins-silero
-livekit-plugins-google
-livekit-plugins-noise-cancellation
-mem0ai
-duckduckgo-search
-langchain-community
-requests
-python-dotenv
-fastapi
-uvicorn
-python-dotenv
+fastapi==0.115.0
+uvicorn==0.29.0
+python-multipart
+pillow
 google-generativeai
+python-dotenv
+
